# kicad-claude-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
docs/: PROGRESS.md
src/kicad_claude/: __init__.py  state.py
src/kicad_claude/adapters/: annotation.py  digikey.py  drc_rules.py  electrical_calc.py  freerouting.py  kicad_cli.py  kicad_python.py  length_tuning.py  library_create.py  mouser.py  panelization.py  pcb_editor.py  pcb_layers.py  project_settings.py  sch_editor.py  sch_io.py  snapeda.py  thermal_emc.py  vendor_import.py
src/kicad_claude/indexer/: kicad_libs.py  search.py
src/kicad_claude/templates/: blank.py
src/kicad_claude/templates/blank/: blank.kicad_pcb  blank.kicad_sch
src/kicad_claude/tools/: emc.py  library.py  library_create.py  manufacturing.py  panelization.py  pcb.py  project.py  rf.py  routing.py  rules.py  schematic.py  signal_integrity.py  simulation.py  sourcing.py  spice.py  sync.py  thermal.py  validation.py
src/kicad_claude/utils/: geometry.py  kicad_paths.py  logging.py
tests/: test_phase10_rules_sync.py  test_phase11_zones_bom.py  test_phase12_diffpair_buses.py  test_phase13_advanced.py  test_phase14_si_thermal_rf.py  test_phase15_panelize_spice_fem.py  test_phase1_project.py  test_phase2_indexer.py  test_phase3_schematic.py  test_phase4_sourcing.py  test_phase5_pcb.py  test_phase6_routing.py  test_phase7_validation.py  test_phase8_hierarchy_layers.py  test_phase9_manufacturing.py  test_ping.py
tests/fixtures/: MiniLib.kicad_sym
tests/fixtures/MiniFP.pretty/: Mini_R_0603.kicad_mod
