[project]
name = "kicad-claude-mcp"
version = "0.1.0"
description = "MCP server that lets Claude Code design KiCAD PCBs by editing project files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Grigory Filimonov" }]
dependencies = [
    "mcp[cli]>=1.25,<2",
    "kicad-skip>=0.2.5",
    "httpx>=0.27",
    "pydantic>=2",
    "rapidfuzz>=3",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_claude"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that invoke kicad-cli or Freerouting (deselect with -m \"not slow\")",
]
